--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "nodemailer": "^5.1.1",
     "path": "^0.12.7",
     "pg": "^7.8.1",
     "react": "^16.8.3",
