Applied bootstrap react to login form. Bundled up all css files to clear up html dependencies. added more packages for style

--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
   "author": "Me",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "bootstrap-social": "^5.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "nodemailer": "^5.1.1",
     "path": "^0.12.7",
     "pg": "^7.8.1",
+    "popper.js": "^1.14.7",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
@@ -32,11 +39,15 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "nodemon": "^1.18.10",
+    "redux-devtools-extension": "^2.13.8",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "nodemon": "^1.18.10",
-    "redux-devtools-extension": "^2.13.8"
+    "webpack-dev-server": "^3.2.1"
   }
 }
