--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^5.1.1",
     "path": "^0.12.7",
     "pg": "^7.8.1",
