--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "aws-sdk": "^2.420.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -23,6 +24,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "multer": "^1.4.1",
     "node-schedule": "^1.3.2",
     "nodemailer": "^5.1.1",
     "path": "^0.12.7",
