--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=development; webpack-dev-server --open | nodemon server/server.js",
-    "build": "export NODE_ENV=development; webpack"
+    "build": "export NODE_ENV=development; webpack",
+    "test": "jest --verbose"
   },
   "author": "Me",
   "license": "ISC",
@@ -47,10 +48,13 @@
     "@babel/preset-react": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.7.2",
     "babel-loader": "^8.0.5",
+    "babel-jest": "^24.5.0",
     "css-loader": "^2.1.1",
+    "jest": "^24.5.0",
     "nodemon": "^1.18.10",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^0.23.1",
+    "supertest": "^4.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
